applications/gatekeeper/replicas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-audit
  namespace: gatekeeper-system
spec:
  replicas: 2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-policy-manager
  namespace: gatekeeper-system
spec:
  replicas: 2
