applications/gatekeeper/gpm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpm-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: gpm.example.com
    http:
      paths:
      - backend:
          service:
            name: gatekeeper-policy-manager
            port:
              number: 80
        path: /
        pathType: Prefix
